--- a/style.css
+++ b/style.css
@@ -178,7 +178,8 @@ header {
 }
 
 .contact-form-container {
-    max-width: 1200px;
+    max-width: 1200px !important;
+    width:90% !important
     margin: 2rem auto;
     padding: 2rem;
 }
