--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ header {
 
 .contact-form-container {
     max-width: 1000px !important;
-    width:70% !important
+    width:70% !important;
     margin: 2rem auto;
     padding: 2rem;
 }
