--- a/style.css
+++ b/style.css
@@ -960,7 +960,7 @@ div.resume-viewer,
 
 h1 {
     font-size: 3.5rem;
-    color: #2c3e50;
+    color: #ffffff;
     margin-bottom: 1rem;
     font-weight: 700;
 }
