--- a/style.css
+++ b/style.css
@@ -956,8 +956,9 @@ div.resume-viewer,
 
 .greeting {
     font-size: 1.8rem;
-    color: #3498db;
+    color: #cccccc;  /* Light grey color */
     margin-bottom: 1rem;
+    animation: fadeInDown 1s ease;
 }
 
 .home-text h1 {
