--- a/style.css
+++ b/style.css
@@ -956,7 +956,7 @@ div.resume-viewer,
 
 .greeting {
     font-size: 1.8rem;
-    color: #666666;  /* Light grey color */
+    color: #8d8d8d;  /* Light grey color */
     margin-bottom: 1rem;
     animation: fadeInDown 1s ease;
 }
