--- a/style.css
+++ b/style.css
@@ -386,7 +386,9 @@ header {
   width: 300px;
   margin-right: 50px;
   margin-left: 20px;
-  text-align: center; /* Center the caption under the photo */
+  display: flex;  /* Add flex display */
+  flex-direction: column;  /* Stack items vertically */
+  align-items: center;  /* Center items horizontally */
 }
 
 .aboutmetext {
