--- a/style.css
+++ b/style.css
@@ -992,15 +992,15 @@ div.resume-viewer,
 }
 
 .greeting h2 {
-    font-size: 4.5rem; 
-    margin-bottom: 1rem;
-    color: #333;
-    font-weight: bold;
+    font-size: 6rem !important;
+    margin-bottom: 1rem !important;
+    color: #333 !important;
+    font-weight: bold !important;
 }
 
 .home-text h1 {
     font-size: 3.5rem;
-    color: #2c3e50;  /* Dark color/black */
+    color: #2c3e50;
     margin-bottom: 1rem;
     font-weight: 700;
 }
