--- a/style.css
+++ b/style.css
@@ -1068,6 +1068,20 @@ footer {
     transform: scale(1.2);
 }
 
+.profile-image {
+  width: 450px;
+  height: auto;
+  max-width: 100%;
+  justify-self: center;
+}
+
+/* Mobile responsiveness */
+@media (max-width: 1024px) {
+  .profile-image {
+      width: 350px;
+  }
+}
+
 /* Platform-specific hover colors */
 .fa-linkedin:hover {
     color: #0077b5;
